# study_c_plus_plus

./: study_c_plus_plus.sln
DynamicArray/: ArrayTests.vcxproj  DynamicArray.vcxproj.filters  README.md
DynamicArray/src/: Array.h  Array.ipp
DynamicArray/tests/: ArrayTests.cpp  CMakeLists.txt  QUICK_START.md  README_TESTS.md
hammurabi/: hammurabi.vcxproj
hammurabi/Saves/MainScren.txt/: 1
hammurabi/Screens/: MainScren.txt  advisor.txt  rat.txt
hammurabi/src/: main.cpp
hammurabi/src/config/: GameConfig.h
hammurabi/src/domain/: CityState.cpp  CityState.h  GameState.h  Statistics.cpp  Statistics.h
hammurabi/src/services/: DisplayManager.cpp  DisplayManager.h  GameEngine.cpp  GameEngine.h  InputHandler.cpp  InputHandler.h  SaveManager.cpp  SaveManager.h
hammurabi/src/utils/: utility.h
